add h1,h3 and form

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,20 @@
   <title>Super Galactic Age Calculator</title>
 </head>
 <body>
-
+<div class="container">
+  <h1>Intergalactic, planetary, planetary, intergalactic,
+  Intergalactic, planetary, planetary, intergalactic,
+  Intergalactic, planetary, planetary, intergalactic,
+  Intergalactic, planetary, planetary, intergalactic</h1>
+<h2>Please enter your information below and see how old you are in different planets. We'll also tell you how much time you got left.... on those other planets</h2>
+<form id ="user-input">
+  <label for="age"> Please enter your age:</label>
+  <input id="age" type="number"><br>
+  <label for="lifeExpectancy">Please enter your life expectancy according to the map on the left</label>
+  <input id="expectancy" type="number"><br>
+  <button type="submit">Submit your information</button>
+</form>
+<div id="results">Wow you are an old man in all those planets</div>
+</div>
 </body>
 </html>
